Implement all the lists

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,35 @@
     <string name="packets_overview">Packets overview</string>
     <string name="connections_overview">Connections overview</string>
     <string name="streaming">Streaming</string>
+    <string name="port">Port</string>
+    <string name="port_outside_range">Port has to be in range 1-65535</string>
+    <string name="tcp_server_on_port">"TCP server on port "</string>
+    <string name="name_cannot_be_empty">Name cannot be empty</string>
+    <string name="tcp_client_on_host">"TCP client on host: "</string>
+    <string name="port_has_to_be_specified">Port has to be specified</string>
+    <string name="hostname">Hostname</string>
+    <string name="hostname_has_to_be_specified">Hostname has to be specified</string>
+    <string name="hostname_cannot_contain_spaces">Hostname cannot contain spaces</string>
+    <string name="include_following_sensors">Include following sensors:</string>
+    <string name="accelerometer">Accelerometer</string>
+    <string name="ambient_temperature">Ambient temperature</string>
+    <string name="gravity">Gravity</string>
+    <string name="light">Light</string>
+    <string name="linear_acceleration">Linear acceleration</string>
+    <string name="rotation_vector">Rotation vector</string>
+    <string name="relative_humidity">Relative humidity</string>
+    <string name="proximity">Proximity</string>
+    <string name="pressure">Pressure</string>
+    <string name="magnetic_field">Magnetic field</string>
+    <string name="gyroscope">Gyroscope</string>
+    <string name="empty_packet">Empty packet</string>
+    <string name="binary_packet">"Binary packet: "</string>
+    <string name="json_packet">JSON packet:</string>
+    <string name="invalid_packet">Invalid packet</string>
+    <string name="include_timestamp">Include timestamp</string>
+    <string name="connection">Connection</string>
+    <string name="packet">Packet</string>
+    <string name="frequency_hz">Frequency (Hz)</string>
+    <string name="start">Start</string>
+    <string name="stop">Stop</string>
 </resources>
